# lmu-dualsense

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/lmu_dualsense/: __init__.py  __main__.py  config.py  feedback.py  gui.py  mcp_server.py  steering.py
src/lmu_dualsense/controller/: __init__.py  dualsense.py  effects.py
src/lmu_dualsense/dashboard/: server.py
src/lmu_dualsense/telemetry/: __init__.py  acc_shm.py  acc_structs.py  base.py  recorder.py  scoring.py  shm.py  structs.py
tests/: conftest.py  test_effects.py
udev/: 99-dualsense.rules
