[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lmu-dualsense"
version = "0.1.0"
description = "Le Mans Ultimate → DualSense adaptive trigger feedback for Linux"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydualsense>=0.5",
    "dearpygui>=1.11",
    "evdev>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
lmu-dualsense = "lmu_dualsense.gui:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lmu_dualsense"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
